--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -9,10 +9,10 @@
 					<div ng-switch on="!!msg.url">
 						<p ng-switch-when="false" style="ellipses:true">
 							{{msg.msg|truncate:show_more(1,msg.msg)}}
-							<a ng-if="msg.msg.length > 100" href="/posts/{{$index}}"  style="color:#B2D40A;text-decoration:none">more</a>
+							<a ng-if="msg.msg.length > 100" href="/posts/{{$index}}"  style="color:#c0392b;text-decoration:none">more</a>
 						</p>
 						<p ng-switch-when="true">
-							 <a href={{msg.url}} style="color:#B2D40A;text-decoration:none">{{msg.msg}}</a>
+							 <a href={{msg.url}} style="color:#3498db;text-decoration:none">{{msg.msg}}</a>
 						</p>
 					</div>
 
