design color changes

--- a/static/partials/post.html
+++ b/static/partials/post.html
@@ -1,6 +1,6 @@
 
 <div class="myclass" >
-<a href="/"  style="color:#B2D40A;text-decoration:none"> back</a>
+<a href="/"  style="color:#c0392b;text-decoration:none"> back</a>
 				
 					<h6>
 						{{post.date}} , {{post.country}} , {{post.state}} , {{post.city}}
