major design changes,also now using mapbox maps

--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -2,7 +2,7 @@
 			<div class="myclass" >
 				
 					<h6 style="display:inline-block">
-						  <span>{{msg.country}}</span>  <span ng-if="msg.state != 'unavailable'">.&nbsp;{{msg.state}}</span>  <span ng-if="msg.county">.&nbsp;{{msg.county}}</span><span ng-if="msg.suburb">.&nbsp;{{msg.suburb}}</span> <span ng-if="msg.city != 'unavailable'">.&nbsp;{{msg.city}}</span>  <span ng-if="msg.road != 'unavailable'">{{msg.road}}.&nbsp;</span> &nbsp;&nbsp; <span  class="pull-right">{{msg.date}} </span>
+						  <span>{{msg.country}}</span>  <span ng-if="msg.state != 'unavailable'">.&nbsp;{{msg.state}}</span>  <span ng-if="msg.county">.&nbsp;{{msg.county}}</span><span ng-if="msg.suburb">.&nbsp;{{msg.suburb}}</span> <span ng-if="msg.city != 'unavailable'">.&nbsp;{{msg.city}}</span>  <span ng-if="msg.road != 'unavailable'">{{msg.road}}&nbsp;</span>
 						
 					</h6>
 
