--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -2,7 +2,7 @@
 			<div class="myclass" >
 				
 					<h6 style="display:inline-block">
-						  <span>{{msg.country}}</span>  <span ng-if="msg.state != 'unavailable'">.&nbsp;{{msg.state}}</span>  <span ng-if="msg.county">.&nbsp;{{msg.county}}</span><span ng-if="msg.suburb">.&nbsp;{{msg.suburb}}</span> <span ng-if="msg.city != 'unavailable'">.&nbsp;{{msg.city}}</span>  <span ng-if="msg.road">.{{msg.road}}&nbsp;</span> 
+						  <span>{{msg.country}}</span>  <span ng-if="msg.state != 'unavailable'">.&nbsp;{{msg.state}}</span>  <span ng-if="msg.county">.&nbsp;{{msg.county}}</span><span ng-if="msg.suburb">.&nbsp;{{msg.suburb}}</span> <span ng-if="msg.city != 'unavailable'">.&nbsp;{{msg.city}}</span>  <span ng-if="msg.road">.{{msg.road}}&nbsp;</span>&nbsp;&nbsp; 
 						
 					</h6>
 
@@ -29,6 +29,9 @@
 		 					<a href="" class="fa fa-chevron-down" ng-click="likeMsg(2,msg)" style="text-decoration:none;color:#FF5D38"></a>
 
 		 				</h4>
+		 				<h6 style="display:inline">
+		 					<span>{{msg.date | date:'short'}} </span> 	
+		 				</h6>
 					
 
 					</div>
