--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -30,7 +30,7 @@
 
 		 				</h4>
 		 				<h6 style="display:inline">
-		 					&nbsp;&nbsp;<span>{{msg.date | date:'d MMM h:mm a'}} </span> 	
+		 					&nbsp;&nbsp;<span>{{msg.date | date:'d MMM, h:mm a'}} </span> 	
 		 				</h6>
 					
 
