button click imrove

--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -29,9 +29,9 @@
 
 						
 	 					<h4 style="display:inline">
-		 					<a href="" class="fa fa-chevron-up" ng-click="likeMsg(1,msg)" style="text-decoration:none;color:#66CC9A"></a>
+		 					<a href="" class="fa fa-chevron-up" ng-click="likeMsg(1,msg)" style="text-decoration:none;color:#66CC9A;outline: none;"></a>
 		 					&nbsp;
-		 					<a href="" class="fa fa-chevron-down" ng-click="likeMsg(2,msg)" style="text-decoration:none;color:#FF5D38"></a>
+		 					<a href="" class="fa fa-chevron-down" ng-click="likeMsg(2,msg)" style="text-decoration:none;color:#FF5D38;outline: none;"></a>
 
 		 				</h4>
 		 				<h6 style="display:inline">
