added nominatim search

--- a/static/partials/view_posts.html
+++ b/static/partials/view_posts.html
@@ -1,4 +1,4 @@
-		<div ng-repeat="msg in msgs | filter:criteria">
+		<div ng-repeat="msg in msgs">
 			<div class="myclass" ng-class="{focus: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false" >
 				<style type="text/css">
 					.focus{
