Major re-design

--- a/static/partials/post.html
+++ b/static/partials/post.html
@@ -1,5 +1,5 @@
 
-<div class="myclass" >
+<div style="margin:0px;padding:0px" >
 <a href="/"  style="color:#c0392b;text-decoration:none"> back</a>
 				&nbsp;
 					<h6 style="display:inline-block">
@@ -7,16 +7,16 @@
 						
 					</h6>
 
-					<div >
-						<p  style="ellipses:true">
+					<divstyle="font-size:20px">
+						<p>
 							{{post.msg}}
 							
 						</p>
-											</div>
+					</div>
 
 					<div style="display:inline">
 						<h5 style="display:inline">
-							<i  class="glyphicon glyphicon-heart"></i> 
+							<i  class="fa fa-heart"></i> 
 							&nbsp;{{post.likes}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	 					</h5>
 
