button color changes

--- a/static/partials/login_modal.html
+++ b/static/partials/login_modal.html
@@ -26,7 +26,7 @@
 
 
 </form>
-  <button  class="btn btn-success" ng-click=""><span ng-show="!signup">login</span><span ng-show="signup">signup</span></button>
+  <button  class="btn btn-success" ng-click="" style=";background-color:#fff;color:#000"><span ng-show="!signup" >login</span><span ng-show="signup">signup</span></button>
 
 
 	<hr>
