--- a/static/partials/login_modal.html
+++ b/static/partials/login_modal.html
@@ -26,13 +26,37 @@
 
 
 </form>
-  <button  class="btn btn-success" ng-click="" style=";background-color:#fff;color:#000"><span ng-show="!signup" >login</span><span ng-show="signup">signup</span></button>
+  <button  class="btn btn-success navbar-btn" ng-click="" style=";background-color:#fff;color:#000"><span ng-show="!signup" >login</span><span ng-show="signup">signup</span></button>
 
 
 	<hr>
 
 	<p> <span ng-show="!signup">Need an account? </span><span ng-show="signup">Have an account? </span><a ng-click="signup=!signup" ng-show="!signup" href="">Signup</a>
 	<a href="" ng-show="signup" ng-click="signup=!signup">login</a></p>
+
+	<ul>
+		<li>
+			<p>
+				
+				The application uses geo-location that you need to enable in your browser popup to post.
+			</p>
+		</li>
+		<li>
+			<p>
+				Your privacy and security are of primary concern to us.	
+			</p>
+		</li>		<li>
+			<p>
+			 	We do not track your location in any way or form and you have complete 
+				control over what location you tag to the post.
+				
+			</p>
+		</li>		
+	</ul>
+		
+		
+		
+	
 	
 
 </div>
