--- a/static/partials/post_modal.html
+++ b/static/partials/post_modal.html
@@ -16,28 +16,28 @@
         <li >
           
         <a href="" style="outline:none">
-           <span ng-click="show_selectednews = !show_selectednews;addTag(2)"  class="label label-warning"><i ng-show="show_selectednews" class="fa fa-check"></i>&nbsp;unverified</span>
+           <span ng-click="show_selectednews = !show_selectednews;addTag(2)"  class="label label-warning"><i ng-show="show_selectednews" class="fa fa-check"></i>unverified</span>
         </a>  
         </li>
 
         <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedpolitics = !show_selectedpolitics;addTag(4)"  class="label label-primary"><i ng-show="show_selectedpolitics" class="fa fa-check"></i>&nbsp;confession</span>        
+            <span ng-click="show_selectedpolitics = !show_selectedpolitics;addTag(4)"  class="label label-primary"><i ng-show="show_selectedpolitics" class="fa fa-check"></i>confession</span>        
           </a> 
         </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedtech = !show_selectedtech;addTag(1)"  class="label label-success"><i ng-show="show_selectedtech" class="fa fa-check"></i>&nbsp;opinion</span>        
+            <span ng-click="show_selectedtech = !show_selectedtech;addTag(1)"  class="label label-success"><i ng-show="show_selectedtech" class="fa fa-check"></i>opinion</span>        
           </a>
          </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedbreaking = !show_selectedbreaking;addTag(3)"  class="label label-danger"><i ng-show="show_selectedbreaking" class="fa fa-check"></i>&nbsp;breaking</span>        
+            <span ng-click="show_selectedbreaking = !show_selectedbreaking;addTag(3)"  class="label label-danger"><i ng-show="show_selectedbreaking" class="fa fa-check"></i>breaking</span>        
           </a> 
         </li>
          <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selected = !show_selected;addTag(5)"  class="label label-default"><i ng-show="show_selected" class="fa fa-check"></i>&nbsp;other</span>        
+            <span ng-click="show_selected = !show_selected;addTag(5)"  class="label label-default"><i ng-show="show_selected" class="fa fa-check"></i>other</span>        
           </a>
         </li>
      
