--- a/static/partials/post_modal.html
+++ b/static/partials/post_modal.html
@@ -1,12 +1,15 @@
   <div class="modal-body">
-            <div style="margin-bottom: 10px;font-family:Roboto">
-        <textarea placeholder="Post your thoughts" ng-model="$parent.currMsg" class="form-control" rows="20"></textarea>
-      </div>
+      	<form name="myForm">
+        <div style="margin-bottom: 10px;font-family:Roboto">
+        <textarea placeholder="Post your thoughts" ng-model="$parent.currMsg" class="form-control" rows="20" required></textarea>
+      	</div>
       <div ng-show="showAlert" class="alert alert-success col-lg-6 col-lg-offset-3" close="closeAlert()">posted</div>
       <!-- Url link area to send -->
       <div  style="margin-bottom: 10px">
-         <input placeholder="Share a link" type="url" name="bday" class="form-control" ng-model="$parent.msgUrl">
+         <input placeholder="Share a link" type="url" name="myurl" class="form-control" ng-model="$parent.msgUrl">
+          <span class="error" ng-show="myForm.myurl.$error.url">Not valid url!</span>
       </div>
+      </form>
        <ul class="nav nav-pills nav" style="font-size:15px" ng-if="placesList.address">
          <li>
           <a href="">
@@ -16,28 +19,28 @@
         <li >
           
         <a href="" style="outline:none">
-           <span ng-click="show_selectednews = !show_selectednews;addTag(2)"  class="label label-warning"><i ng-show="show_selectednews" class="fa fa-check"></i>unverified</span>
+           <span ng-click="question = !question;addTag(2)"  class="label label-warning"><i ng-show="question" class="fa fa-check"></i>question</span>
         </a>  
         </li>
 
         <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedpolitics = !show_selectedpolitics;addTag(4)"  class="label label-primary"><i ng-show="show_selectedpolitics" class="fa fa-check"></i>confession</span>        
+            <span ng-click="opinion = !opinion;addTag(4)"  class="label label-primary"><i ng-show="opinion" class="fa fa-check"></i>opinion</span>        
           </a> 
         </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedtech = !show_selectedtech;addTag(1)"  class="label label-success"><i ng-show="show_selectedtech" class="fa fa-check"></i>opinion</span>        
+            <span ng-click="news = !news;addTag(1)"  class="label label-success"><i ng-show="news" class="fa fa-check"></i>news</span>        
           </a>
          </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedbreaking = !show_selectedbreaking;addTag(3)"  class="label label-danger"><i ng-show="show_selectedbreaking" class="fa fa-check"></i>breaking</span>        
+            <span ng-click="confession = !confession;addTag(3)"  class="label label-danger"><i ng-show="confession" class="fa fa-check"></i>confession</span>        
           </a> 
         </li>
          <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selected = !show_selected;addTag(5)"  class="label label-default"><i ng-show="show_selected" class="fa fa-check"></i>other</span>        
+            <span ng-click="other = !other;addTag(5)"  class="label label-default"><i ng-show="other" class="fa fa-check"></i>other</span>        
           </a>
         </li>
      
