--- a/static/partials/mapview_posts.html
+++ b/static/partials/mapview_posts.html
@@ -54,8 +54,8 @@
 		 				</h4>
 		 				<small>
 		 				<h6 style="display:inline">
-		 					
-		 					 <span style="margin:6px" class="label label-default" ng-repeat="tag in msg.tags">{{tag}}</span>
+
+							<a href="" style="text-decoration:none;outline:none" ng-click="tagposts(tag)"><span ng-repeat="tag in msg.tags" style="margin:6px" class="label label-default">{{tag}}</span></a>
 		 					 
 		 				</h6>
 						</small>
