--- a/static/partials/post_modal.html
+++ b/static/partials/post_modal.html
@@ -1,9 +1,17 @@
+<style type="text/css">
+  .modal-dialog{
+    width: 800px;
+  }
+</style>
+    
+      
+      <div class="modal-dialog">
   <div class="modal-body">
       	<form name="myForm">
         <div style="margin-bottom: 10px;font-family:Roboto">
-        <textarea placeholder="Post your thoughts" ng-model="$parent.currMsg" class="form-control" rows="20" required></textarea>
+        <textarea placeholder="Post your thoughts" ng-model="$parent.currMsg" class="form-control" rows="6" required></textarea>
       	</div>
-      <div ng-show="showAlert" class="alert alert-success col-lg-6 col-lg-offset-3" close="closeAlert()">posted</div>
+      
       <!-- Url link area to send -->
       <div  style="margin-bottom: 10px">
          <input placeholder="Share a link" type="url" name="myurl" class="form-control" ng-model="$parent.msgUrl">
@@ -19,28 +27,28 @@
         <li >
           
         <a href="" style="outline:none">
-           <span ng-click="question = !question;addTag(2)"  class="label label-warning"><i ng-show="question" class="fa fa-check"></i>question</span>
+           <span ng-click="question = !question;addTag(2)"  class="label label-warning"><i ng-show="question" class="fa fa-check"></i>&nbsp;question</span>
         </a>  
         </li>
 
         <li >
            <a href="" style="outline:none">
-            <span ng-click="opinion = !opinion;addTag(4)"  class="label label-primary"><i ng-show="opinion" class="fa fa-check"></i>opinion</span>        
+            <span ng-click="opinion = !opinion;addTag(4)"  class="label label-primary"><i ng-show="opinion" class="fa fa-check"></i>&nbsp;opinion</span>        
           </a> 
         </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="news = !news;addTag(1)"  class="label label-success"><i ng-show="news" class="fa fa-check"></i>news</span>        
+            <span ng-click="news = !news;addTag(1)"  class="label label-success"><i ng-show="news" class="fa fa-check"></i>&nbsp;news</span>        
           </a>
          </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="confession = !confession;addTag(3)"  class="label label-danger"><i ng-show="confession" class="fa fa-check"></i>confession</span>        
+            <span ng-click="confession = !confession;addTag(3)"  class="label label-danger"><i ng-show="confession" class="fa fa-check"></i>&nbsp;confession</span>        
           </a> 
         </li>
          <li >
            <a href="" style="outline:none">
-            <span ng-click="other = !other;addTag(5)"  class="label label-default"><i ng-show="other" class="fa fa-check"></i>other</span>        
+            <span ng-click="other = !other;addTag(5)"  class="label label-default"><i ng-show="other" class="fa fa-check"></i>&nbsp;other</span>        
           </a>
         </li>
      
@@ -49,7 +57,7 @@
 
       </ul>
 
-        <ul class="nav nav-pills nav" style="font-size:15px" ng-if="placesList.address">
+        <ul class="nav nav-pills nav" style="font-size:15px;margin-top:20px" ng-if="placesList.address">
         <li style="clickable:true">
           <a  >
           <strong >Post to</strong>
@@ -97,3 +105,6 @@
       </ul>
 
         </div>
+      </div> 
+
+
