added user guidelines

--- a/static/partials/hype_modal.html
+++ b/static/partials/hype_modal.html
@@ -43,3 +43,20 @@
 
 </div>
 </div>
+<div class="modal-footer text-right">
+	<div class="container" style="width:100%">
+		<a href="" ng-init="showdef=false" ng-click="showdef=!showdef">what is a hype ?</a>
+		<p ng-show="showdef">
+			<strong><em>"hype"</em></strong> , or <em>Hyper-local Ephemeral Thread</em>
+			is a collection of posts that is tagged to a location. Like a college or a local tea-shop or the nearby mall.
+		</p>
+		<p ng-show="showdef">
+			This collection of posts is created when people in that area choose to share , discuss or ask for information.
+			
+		</p>
+		<p ng-show="showdef">
+			You as a user can post anything only to a <em>hype</em> in your surroundings but can view hypes in anyplace , anywhere in the world
+		</p>
+	</div>
+	
+</div>
