--- a/static/partials/post_modal.html
+++ b/static/partials/post_modal.html
@@ -104,6 +104,22 @@
 
       </ul>
 
+
+  <div class="container" style="width:100%">
+    <a href="" ng-init="showdef=false" ng-click="showdef=!showdef">how does posting work ?</a>
+    <p ng-show="showdef">
+     Posting to a location means the post is visible in all parent hierarchies of location
+    </p>
+    <p ng-show="showdef">
+      When you post to your city , the post is visible in the city, in the state and in the country but not in the suburb or street
+      
+    </p>
+    <p ng-show="showdef">
+      You can also tag your posts as you see fit depending on their content.
+    </p>
+  </div>
+  
+
         </div>
       </div> 
 
